tutorials/04-networking/service.yml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: tutorial
  labels:
    app: web
    tutorial: networking
spec:
  type: ClusterIP
  selector:
    app: web
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    name: http
